--- a/1200M.md
+++ b/1200M.md
@@ -1,4 +1,4 @@
-| Model                     | Num Tokens | HSWAG   | ARC-e   | ARC-c   | PiQA   | Winogrande | C4 Val Loss |
-|---------------------------|------------|---------|---------|---------|--------|------------|--------------|
-| 1200M-W4A4          | 40B | 39.20%  | 50.70%  | 23.20%  | 70.50% | 51.00%    | 2.528  |
-| 430M-BF16           | 43B | 36.21%  | 48.95%  | 20.82%  | 70.57% | 51.78%    | 2.571 |
+| Model                     | Num Tokens | HSWAG   | ARC-e   | ARC-c   | PiQA   | Winogrande | Avg. 0-shot | C4 Val Loss |
+|---------------------------|------------|---------|---------|---------|--------|------------|------------:|------------:|
+| 1200M-W4A4                | 40B        | 39.20%  | 50.70%  | 23.20%  | 70.50% | 51.00%     | 46.12%      | 2.528 |
+| 430M-BF16                 | 43B        | 36.21%  | 48.95%  | 20.82%  | 70.57% | 51.78%     | 45.67%      | 2.571 |
